correct links and fix mobile horizontal scroll

--- a/devCSS/devCSS.css
+++ b/devCSS/devCSS.css
@@ -311,6 +311,7 @@ ul {
 
 #workPage .row {
 	width: 100%;
+	overflow-x: hidden;
 }
 
 /* ---- Navigation Values ----- */
